# oniWorldApp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.zh-CN.md  package.json  tsconfig.json  webpack.config.ts
asset/: Asubworlds.json
asset/templates/bases/: forestBase.json  sandstoneBase.json
asset/templates/geysers/: big_volcano.json  chlorine_gas.json  chlorine_gas_cool.json  filthy_water.json  generic.json  hot_co2.json  hot_hydrogen.json  hot_po2.json  hot_steam.json  hot_water.json  liquid_co2.json  methane.json  molten_copper.json  molten_gold.json  molten_iron.json  oil_drip.json  salt_water.json  slimy_po2.json  slush_water.json  small_volcano.json  steam.json  volcanohole.json
asset/templates/poi/: poi_broken_farm.json  poi_dining_room.json  poi_dupe_sensor_puzzle.json  poi_gravitas.json  poi_ladder_tunnel.json  poi_ocean_geyser_saltwater.json  poi_oil_six_switch_door.json  poi_oil_switchdoor.json  poi_old_pool.json  poi_rust_spiral.json  poi_salt_spiral.json  poi_salt_spiral_2.json  poi_salt_spiral_3.json  poi_satellite_1_a.json  poi_satellite_1_b.json  poi_satellite_2_a.json  poi_satellite_2_b.json  poi_satellite_3_a.json
asset/templates/storytraits/: creature_manipulator.json  creature_manipulator_retrofit.json  fossil_hunt_ice.json  fossil_hunt_main.json  fossil_hunt_resin.json  fossil_hunt_retrofit.json  fossil_hunt_rock.json  lonelyminion.json  lonelyminion_retrofit.json  mega_brain_tank.json  morb_rover_maker.json  morb_rover_maker_ext1.json  morb_rover_maker_ext2.json  morb_rover_maker_retrofit.json
asset/worldgen/: borders.json  defaults.json  layers.json  mobs.json  rivers.json  rooms.json  temperatures.json
asset/worldgen/biomes/: Barren.json  Crystal.json  Default.json  Forest.json  Frozen.json  HotMarsh.json  Jungle.json  Magma.json  Misc.json  Ocean.json  Oil.json  Rust.json  Sedimentary.json
asset/worldgen/clusters/: Badlands.json  BigEmptyCluster.json  ForestDefault.json  ForestHot.json  ForestLush.json  KleiFest2023.json  Oasis.json  Oceania.json  SandstoneDefault.json  SandstoneFrozen.json  TinyEmptyCluster.json  TinySurface.json  Volcanic.json
asset/worldgen/features/: BleachLake.json  DefaultRoom.json  FlutBowl.json  FlutBowlBlob.json  FlutBowlTall.json  Geode.json  GeoventCave.json  HatchHabitat.json  HatchHabitatTall.json  HexapedStart.json  SprinkleOfElement.json  SprinkleOfOxyRock.json
asset/worldgen/noise/: Default.json  DefaultCave.json  DefaultDensity.json  Heat.json  MagmaVent.json  OilField.json  OilPockets.json  OilPocketsStrange.json  Sandstone.json  SandstoneStart.json  SandstoneStrange.json  Twisty.json  subworldCrystal.json  subworldEdgeOfVoid.json  subworldForest.json  subworldFrozen.json  subworldHotMarsh.json  subworldJungleSolid.json  subworldOcean.json  subworldOceanDeep.json  subworldOceanStrange.json
asset/worldgen/storytraits/: CritterManipulator.json  FossilHunt.json  LonelyMinion.json  MegaBrainTank.json  MorbRoverMaker.json
asset/worldgen/subworlds/: Default.json  Empty.json  (+1 more)
public/: manifest.json  serviceworker.js
src/: CMakeLists.txt  CopyWasmFiles.py  CopyWebAssemblyFiles.py  JoinWasmFilesHash.py  JsonDeserializeGen.py  TemplateSpawning.cpp  WorldGen.cpp  WorldGen.hpp  config.h.in  index.css  index.html  index.tsx  main.cpp  types.d.ts
src/Setting/: ClusterLayout.hpp  ComposableDictionary.hpp  DefaultSettings.hpp  JsonDeserialize.hpp  JsonDeserializeGen.hpp  SampleDescriber.hpp  SettingsCache.cpp  SettingsCache.hpp  SimHashes.hpp  TemplateContainer.hpp  World.hpp  WorldGenClasses.cpp  WorldGenClasses.hpp
src/Utils/: ConvexHull.cpp  ConvexHull.hpp  Diagram.cpp  Diagram.hpp  Halfedge.cpp  Halfedge.hpp  KRandom.cpp  KRandom.hpp  PointGenerator.cpp  PointGenerator.hpp  Polygon.cpp  Polygon.hpp  SortHelper.hpp  Vector2f.hpp  Voronoi.cpp  Voronoi.hpp
src/Utils/ConvexHull/: Algorithm.cpp  Algorithm.hpp  Algorithm2D.cpp  Algorithm2D.hpp  Constants.hpp  DataModel.hpp  MathHelper.cpp  MathHelper.hpp
src/jsUtils/: configuration.ts  getresult.js  index.css  index.tsx  language.ts  prefix.js
(+743 files in other folders)
